--- a/style.css
+++ b/style.css
@@ -10,7 +10,110 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    margin: 50px 0;
+}
+
+.card-1 {
+    position: relative;
+    width: 320px;
+    padding: 40px;
+    background-color: #fff;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    margin: 0;
+}
+
+.card-1:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: calc(-100% + 5px);
+    width: 100%;
+    height: 100%;
+    background-color: #ff56ac;
+    z-index: 1;
+    transition: .5s;
+}
+
+.card-1:hover:before {
+    bottom: 0;
+}
+
+.content-1 {
+    position: relative;
+    text-transform: capitalize;
+    color: #777;
+    z-index: 2;
+    transition: .5s;
+}
+
+.content-1 h2 {
+    margin-bottom: 10px;
+    margin-top: 0;
+    font-size: 30px;
+}
+
+.content-1 p {
+    font-size: 18px;
+}
+
+.content-1 a {
+    margin-top: 10px;
+    font-size: 14px;
+    display: inline-block;
+    text-decoration: none;
+    color: #777;
+    padding: 6px 10px;
+    font-weight: 600;
+    background-color: #fff;
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.05);
+}
+
+.card-1:hover .content-1 {
+    color: #fff;
+}
+
+
+
+/* CARD-2 */
+
+.card-2 {
+    margin-top: 100px;
+    position: relative;
+    width: 300px;
+    height: 200px;
+    border-radius: 10px;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+    transition: .3s;
+    padding: 20px 40px;
+}
+
+.imgbox-2 {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform: translateY(-60px);
+    z-index: 1;
+}
+
+.imgbox-2 img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.card-2:hover {
+    height: 420px;
+}
+
+.content-2 {
+    padding: 10px 20px;
+    text-align: center;
+    color: #111;
+    transition: .3s;
+    transform: translateY(-500px);
+    opacity: 0;
+}
+
+.card-2:hover .content-2 {
+    opacity: 1;
+    transform: translateY(-200px);
 }
