--- a/style.css
+++ b/style.css
@@ -117,3 +117,65 @@ body {
     opacity: 1;
     transform: translateY(-200px);
 }
+
+
+/* CARD-3 */
+
+.card-3 {
+    margin-top: 200px;
+    position: relative;
+    width: 500px;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    background: linear-gradient(45deg, #d41e31, #491f8f);
+    border-radius: 20px;
+}
+
+.card-3 img {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 400px;
+    transition: .5s;
+}
+
+.card-3:hover img {
+    height: 450px;
+    left: 80%;
+}
+
+.content-3 {
+    position: relative;
+    width: 40%;
+    left: 20%;
+    color: #fff;
+    text-transform: capitalize;
+    transition: .5s;
+    opacity: 0;
+}
+
+.card-3:hover .content-3 {
+    left: 5%;
+    opacity: 1;
+}
+
+.content-3 h2 {
+    margin: 0;
+    padding: 0;
+}
+
+.content-3 p {
+    margin-bottom: 20px;
+}
+
+.content-3 a {
+    position: relative;
+    display: inline-block;
+    color: #111;
+    padding: 5px 10px;
+    background: #fff;
+    text-decoration: none;
+    border-radius: 10px;
+}
