--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
     margin: 50px 0;
 }
 
+/* CARD-1 */
+
 .card-1 {
     position: relative;
     width: 320px;
@@ -26,10 +28,10 @@ body {
     content: '';
     position: absolute;
     left: 0;
-    bottom: calc(-100% + 5px);
+    bottom: calc(-100% + 15px);
     width: 100%;
     height: 100%;
-    background-color: #ff56ac;
+    background-color: #56c9ff;
     z-index: 1;
     transition: .5s;
 }
@@ -44,6 +46,10 @@ body {
     color: #777;
     z-index: 2;
     transition: .5s;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
 }
 
 .content-1 h2 {
@@ -54,6 +60,7 @@ body {
 
 .content-1 p {
     font-size: 18px;
+    text-align: center;
 }
 
 .content-1 a {
@@ -65,6 +72,7 @@ body {
     padding: 6px 10px;
     font-weight: 600;
     background-color: #fff;
+    border: 1px solid #777;
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.05);
 }
 
@@ -77,7 +85,7 @@ body {
 /* CARD-2 */
 
 .card-2 {
-    margin-top: 100px;
+    margin-top: 150px;
     position: relative;
     width: 300px;
     height: 200px;
@@ -97,21 +105,24 @@ body {
 
 .imgbox-2 img {
     width: 100%;
+    height: 200px;
+    object-fit: cover;
     border-radius: 10px;
 }
 
 .card-2:hover {
-    height: 420px;
+    height: 400px;
 }
 
 .content-2 {
-    padding: 10px 20px;
+    padding: 0 20px;
     text-align: center;
     color: #111;
     transition: .3s;
     transform: translateY(-500px);
     opacity: 0;
 }
+
 
 .card-2:hover .content-2 {
     opacity: 1;
@@ -128,7 +139,7 @@ body {
     height: 300px;
     display: flex;
     align-items: center;
-    background: linear-gradient(45deg, #d41e31, #491f8f);
+    background: linear-gradient(45deg, #0A262E, #386674);
     border-radius: 20px;
 }
 
