--- a/style.css
+++ b/style.css
@@ -367,3 +367,95 @@ body {
     background-color: #777;
     color: #fff;
 } 
+
+
+
+
+
+
+
+/* CARD-6 */
+
+.card-6 {
+    margin-top: 50px;
+    position: relative;
+    width: 320px;
+    height: 350px;
+    transition: .5s;
+    border-radius: 4px;
+    background: #363274;
+    color: #fff;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.card-6:before,
+.card-6:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    background-color: #363274;
+    transition: .5s;
+    z-index: -1;
+}
+
+.card-6:hover:before {
+    transform: rotate(20deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+}
+
+.card-6:hover:after {
+    transform: rotate(10deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+}
+
+.imgbox-6 {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    bottom: 10px;
+    right: 10px;
+    background-color: #222;
+    transition: .5s;
+    z-index: 2;
+}
+
+.card-6:hover .imgbox-6{
+    bottom: 80px;
+}
+
+.details-6 {
+    position: absolute;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    height: 60px;
+    text-align: center;
+}
+
+.card-6 h2 {
+    margin: 0;
+    padding: 0;
+    font-weight: 600;
+    font-size: 20px;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.card-6 h2 span {
+    font-weight: 500;
+    font-size: 16px;
+    color: #f38695;
+}
+
+.card-6  img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
