--- a/style.css
+++ b/style.css
@@ -459,3 +459,87 @@ body {
     height: 100%;
     object-fit: cover;
 }
+
+
+
+
+
+/* CARD-7 */
+
+.card-7 {
+    margin-top: 50px;
+    position: relative;
+    width: 300px;
+    height: 400px;
+    background-color: #000;
+    box-shadow: 0 30px 30px rgba(0, 0, 0, 0.5);
+}
+
+.content-7 {
+    position: absolute;
+    bottom: 0;
+    width: 80%;
+    height: 80px;
+    background-color: #fff;
+    left: 10%;
+    text-align: center;
+    transition: .5s;
+    overflow: hidden;
+}
+
+.content-7 h3 {
+    font-size: 30px;
+    text-transform: uppercase;
+    margin: 25px;
+}
+
+.content-7 p {
+    width: 80%;
+    margin: 10px auto;
+    font-size: 16px;
+    transition: .5s;
+    opacity: 0;
+}
+
+.content-7 a {
+    text-decoration: none;
+    background-color: #000;
+    color: #fff;
+    padding: 10px 15px;
+    display: inline-block;
+    margin-top: 10px;
+    transition: 0.5s;
+    opacity: 0;
+}
+
+.card-7:hover .content-7 {
+    height: 100%;
+    width: 100%;
+    left: 0%;
+}
+
+.card-7:hover p,
+.card-7:hover a {
+    opacity: 1;
+    transition-delay: .3s;
+}
+
+.imgbox-7 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: .3s;
+}
+
+.imgbox-7 img {
+    width: 100%;
+    height: 100%;
+    transition: .3s;
+    object-fit: cover;
+}
+
+.card-7:hover .imgbox-7 img {
+    opacity: 0;
+}
